--- a/.github/workflows/deploy-admin.yml
+++ b/.github/workflows/deploy-admin.yml
@@ -1,13 +1,13 @@
 name: Deploy admin frontend
 
-# Run on push to main (change branch if needed)
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,21 +18,16 @@ jobs:
           node-version: "18"
 
       - name: Install dependencies
-        run: |
-          npm ci
-        working-directory: ./frontend   # <- change if your admin folder is at repo root; remove this line if admin is root
+        run: npm ci
 
       - name: Build production bundle
-        run: |
-          npm run build
-        working-directory: ./frontend   # <- change or remove as above
+        run: npm run build
 
-      - name: Upload build as artifact (optional step for debugging)
+      - name: Upload build as artifact (optional)
         uses: actions/upload-artifact@v4
         with:
           name: admin-build
-          path: ./frontend/build  # <- path to build output
-        if: always()              # keeps artifact even when build fails (optional)
+          path: ./build
 
       - name: Copy build to server (SCP)
         uses: appleboy/scp-action@v0.1.4
@@ -41,10 +36,10 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
-          source: "./frontend/build/*"    # <- path to build contents
+          source: "./build/*"
           target: ${{ secrets.ADMIN_PROJECT_PATH }}
 
-      - name: Set permissions & reload nginx
+      - name: Fix permissions and reload nginx
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -52,10 +47,8 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
           script: |
-            # ensure files owned by www-data (or root as you prefer)
+            # make files readable by nginx
             chown -R www-data:www-data ${{ secrets.ADMIN_PROJECT_PATH }} || true
             chmod -R 755 ${{ secrets.ADMIN_PROJECT_PATH }} || true
-
-            # reload nginx so new files serve immediately
             nginx -t || true
             systemctl reload nginx || true
