--- a/.github/workflows/deploy-admin.yml
+++ b/.github/workflows/deploy-admin.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm ci
 
       - name: Build production bundle
-        run: npm run build
+        run: CI=false npm run build
 
       - name: Upload build as artifact (optional)
         uses: actions/upload-artifact@v4
