--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.2",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "xlsx": "^0.18.5"
