--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.7",
     "dotenv": "^16.4.7",
     "google-map-react": "^2.2.5",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "mongoose-sequence": "^6.0.1",
